[package]
name = "frend-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frenderer="0.9"
image = {version="0.24.7", features=["png"]}
assets_manager = { version = "0.11.2", features = ["png", "hot-reloading", "embedded", "zip", "zip-deflate"] }
winit = "0.29"

[features]
default = []
webgl = ["frenderer/webgl"]
